# Project-Fluffy-Pug-Command-Line

./: CMakeLists.txt  Notes.txt  Readme.md
Required Libraries/ImageMagick-6.9.3-Mac/lib/: libMagick++-6.Q16.6.dylib  libMagick++-6.Q16.la  libMagickCore-6.Q16.la  libMagickWand-6.Q16.2.dylib  libMagickWand-6.Q16.la
Required Libraries/libpng-Mac/lib/: libpng16.la
build2/: CMakeCache.txt  Makefile  artificialIntelligenceBenchmark  cmake_install.cmake
buildWindows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  artificialIntelligenceBenchmark.sln  artificialIntelligenceBenchmark.vcxproj  artificialIntelligenceBenchmark.vcxproj.filters  cmake_install.cmake
ppt/: Presentation.pptx
source/: Utility.h  main.cpp
source/Detection/: DetectionManager.cpp  DetectionManager.h
source/Detection/Ability Manager/: AbilityManager.cpp  AbilityManager.h
source/Detection/Allies/: AllyChampionManager.cpp  AllyChampionManager.h  AllyMinionManager.cpp  AllyMinionManager.h  SelfChampionManager.cpp  SelfChampionManager.h
source/Detection/Enemies/: EnemyChampionManager.cpp  EnemyChampionManager.h  EnemyMinionManager.cpp  EnemyMinionManager.h  EnemyTowerManager.cpp  EnemyTowerManager.h
source/Detection/Item Manager/: ItemManager.cpp  ItemManager.h
source/Detection/Map Manager/: MapManager.cpp  MapManager.h
source/Detection/Objects/: Champion.cpp  Champion.h  GenericObject.cpp  GenericObject.h  Minion.cpp  Minion.h  SelfHealth.cpp  SelfHealth.h  Tower.cpp  Tower.h
source/Detection/Shop Manager/: ShopManager.cpp  (+1 more)
(+34 files in other folders)
